1. モジュール定義を修正し、ビルド可とした。 2. Font Awesomeを使ってブランドアイコンを表示できるようにした。 3. ナビゲーションにGitHubのアイコンを表示。

--- a/src/main/resources/io/github/k7t3/horzcv/client/resources/css/Horz-CV.css
+++ b/src/main/resources/io/github/k7t3/horzcv/client/resources/css/Horz-CV.css
@@ -5,6 +5,20 @@ body > div {
   height: 100%;
 }
 
+nav .svg-inline--fa {
+  vertical-align: middle;
+}
+
+#nav-bar {
+  padding: 0px 45px;
+}
+
+#nav-bar > .nav-wrapper {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
 #content {
   flex-grow: 1;
 }
